// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VM common form component should render editing form variant 1 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item cds--text-input-wrapper"
    >
      <div
        class="cds--text-input__label-wrapper"
      >
        <label
          class="cds--label"
          dir="auto"
          for="name"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Name
        </label>
      </div>
      <div
        class="cds--text-input__field-outer-wrapper"
      >
        <div
          class="cds--text-input__field-wrapper"
        >
          <input
            class="cds--text-input"
            id="name"
            maxlength="128"
            name="name"
            type="text"
            value=""
          />
          
          <span
            aria-atomic="true"
            aria-live="assertive"
            class="cds--text-input__counter-alert"
            role="alert"
          />
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`VM common form component should render editing form variant 2 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item cds--text-input-wrapper"
    >
      <div
        class="cds--text-input__label-wrapper"
      >
        <label
          class="cds--label"
          dir="auto"
          for="name"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Name
        </label>
      </div>
      <div
        class="cds--text-input__field-outer-wrapper"
      >
        <div
          class="cds--text-input__field-wrapper"
        >
          <input
            class="cds--text-input"
            id="name"
            maxlength="128"
            name="name"
            type="text"
            value="CF 4.7  5.10.33 Template"
          />
          
          <span
            aria-atomic="true"
            aria-live="assertive"
            class="cds--text-input__counter-alert"
            role="alert"
          />
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
